--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    pass"
+    "    \n",
+    "    \n",
+    "    def __init__(self,name,weight):\n",
+    "        self.name = name\n",
+    "        self.weight = weight\n",
+    "        self.size = None\n",
+    "        self.species = None\n",
+    "        self.food_type = None\n",
+    "        self.nocturnal = None\n",
+    "    \n",
+    "    def sleep(self):\n",
+    "        if self.nocturnal:\n",
+    "            return 'I sleep during the day'\n",
+    "        else:\n",
+    "            return 'I sleep at night'\n",
+    "    \n",
+    "    def eat(self, food):\n",
+    "        if self.food_type == 'omnivore':\n",
+    "            print(\"{} the {} thinks {} is Yummy!\".format(self.name, self.species, food))\n",
+    "        elif (food == 'meat' and self.food_type == \"carnivore\") or (food == 'plants' and self.food_type == 'herbivore'):\n",
+    "            print(\"{} the {} thinks {} is Yummy!\".format(self.name, self.species, food))\n",
+    "        else:\n",
+    "            print(\"I don't eat this!\")\n",
+    "    "
    ]
   },
   {
@@ -72,12 +95,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self,name,weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.size = 'enormous'\n",
+    "        self.food_type = 'herbivore' \n",
+    "        self.species = 'elephant'\n",
+    "        self.nocturnal=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Elephant at 0x7f5d101f8b38>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Elephant('billi',2000)"
    ]
   },
   {
@@ -95,12 +144,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tiger(Animal):\n",
-    "    pass"
+    "    def __init__(self,name,weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.food_type = 'carnivore' \n",
+    "        self.species = 'tiger'\n",
+    "        self.size = 'large'\n",
+    "        self.nocturnal = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Tiger at 0x7f5d101f8860>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Tiger('joe', 900)"
    ]
   },
   {
@@ -118,12 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Raccoon(Animal):\n",
-    "    pass"
+    "    def __init__(self,name,weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.food_type = 'omnivore'\n",
+    "        self.species='raccoon'\n",
+    "        self.size = 'small'\n",
+    "        self.food_type = 'omnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -141,12 +221,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    pass"
+    "    def __init__(self,name,weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.nocturnal=False\n",
+    "        self.food_type='herbivore'\n",
+    "        self.species='gorilla'\n",
+    "        self.size = 'large'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ghandi.nocturnal"
    ]
   },
   {
@@ -176,12 +281,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    pass"
+    "zoo = []\n",
+    "\n",
+    "def add_animal_to_zoo(zoo, animal, animal_type, name, weight):\n",
+    "    animals = ['gorilla', 'raccoon', 'tiger','elephant']\n",
+    "    if animal_type in animals:\n",
+    "        zoo.append((animal, animal_type, name, weight))\n",
+    "    else: \n",
+    "        return \"that animal isn't allowed in this zoo!\"\n",
+    "    return zoo"
    ]
   },
   {
@@ -200,11 +312,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create your animals and add them to the 'zoo' in this cell!"
+    "# Create your animals and add them to the 'zoo' in this cell!\n",
+    "dumbo = Elephant('Dumbo',1300)\n",
+    "ellie = Elephant('Ellie',1700)\n",
+    "rocko = Raccoon('Rocko',10)\n",
+    "ringo = Raccoon('Ringo',15)\n",
+    "ghandi = Gorilla('Ghandi',900)\n",
+    "tigger = Tiger('Tigger',800)\n",
+    "tony = Tiger('Tony',700)\n",
+    "tanya = Tiger('Tonya',700)\n",
+    "\n",
+    "l = [dumbo, ellie, rocko, ringo, ghandi,tigger, tony, tanya]\n",
+    "for animal in l: \n",
+    "    add_animal_to_zoo(zoo, animal, animal.species, animal.name, animal.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(<__main__.Elephant at 0x7f5d13ab7a20>, 'elephant', 'Dumbo', 1300),\n",
+       " (<__main__.Elephant at 0x7f5d10177048>, 'elephant', 'Ellie', 1700),\n",
+       " (<__main__.Raccoon at 0x7f5d16da0860>, 'raccoon', 'Rocko', 10),\n",
+       " (<__main__.Raccoon at 0x7f5d10177080>, 'raccoon', 'Ringo', 15),\n",
+       " (<__main__.Gorilla at 0x7f5d101770b8>, 'gorilla', 'Ghandi', 900),\n",
+       " (<__main__.Tiger at 0x7f5d101770f0>, 'tiger', 'Tigger', 800),\n",
+       " (<__main__.Tiger at 0x7f5d10177438>, 'tiger', 'Tony', 700),\n",
+       " (<__main__.Tiger at 0x7f5d10204d68>, 'tiger', 'Tonya', 700)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zoo"
    ]
   },
   {
@@ -226,12 +377,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    pass"
+    "    day_animals_food = []\n",
+    "    night_animals_food = []\n",
+    "    if time == 'Day':\n",
+    "        day_animals = list(filter(lambda x: x[0].nocturnal == False, zoo))\n",
+    "        day_animals_food = list(map(lambda x: (x[0], x[0].food_type),day_animals))\n",
+    "        carnivores = [day_animal[0].eat('meat')) for day_animal in day_animals_food if (day_animal[0].food_type == 'carnivore')]\n",
+    "        other = [(day_animal[0].eat('plants')) for day_animal in day_animals_food if (day_animal[0].food_type != 'carnivore')] \n",
+    "        return other + carnivores\n",
+    "    else:\n",
+    "        night_animals = list(filter(lambda x: x[0].nocturnal == True, zoo))\n",
+    "        night_animals_food = list(map(lambda x: (x[0], x[0].food_type),night_animals))\n",
+    "        carnivores = [(night_animal[0].eat('meat')) for night_animal in night_animals_food if (night_animal[0].food_type == 'carnivore')]\n",
+    "        other = [(night_animal[0].name,night_animal[0].eat('plants')) for night_animal in night_animals_food if (night_animal[0].food_type != 'carnivore')] \n",
+    "        return other + carnivores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def feed_animals(zoo, time='Day'):\n",
+    "#     for animal in zoo:\n",
+    "#         if time == 'Day':\n",
+    "#             # CASE: Daytime feeding--Only feed the animals that aren't nocturnal\n",
+    "#             if animal.nocturnal == False:\n",
+    "#                 # If the animal is a carnivore, feed it \"meat\".  Otherwise, feed it \"plants\"\n",
+    "#                 if animal.food_type == 'carnivore':\n",
+    "#                     animal.eat('meat')\n",
+    "#                 else:\n",
+    "#                     animal.eat('plants')\n",
+    "#         else:\n",
+    "#             # CASE: Night-time feeding--feed only the nocturnal animals! \n",
+    "#             if animal.nocturnal == True:\n",
+    "#                 if animal.food_type == 'carnivore':\n",
+    "#                     animal.eat('meat')\n",
+    "#                 else:\n",
+    "#                     animal.eat('plants')"
    ]
   },
   {
@@ -243,10 +432,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Dumbo', 'Dumbo the elephant thinks plants is yummy!'),\n",
+       " ('Ellie', 'Ellie the elephant thinks plants is yummy!'),\n",
+       " ('Ghandi', 'Ghandi the gorilla thinks plants is yummy!')]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feed_animals(zoo, time='Day')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,10 +463,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Rocko', 'Rocko the raccoon thinks plants is yummy!'),\n",
+       " ('Ringo', 'Ringo the raccoon thinks plants is yummy!'),\n",
+       " ('Tigger', 'Tigger the tiger thinks meat is yummy!'),\n",
+       " ('Tony', 'Tony the tiger thinks meat is yummy!'),\n",
+       " ('Tonya', 'Tonya the tiger thinks meat is yummy!')]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feed_animals(zoo, time='Night')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -296,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
